@@ -1,5 +1,9 @@
 1998-12-07    <stanton@GASPODE>
 
+	* generic/tclAlloc.c (TclpRealloc): Fixed a memory allocation bug
+	where big blocks that were reallocated into a different heap
+	location were not being placed into the bigBlocks list. [Bug: 933]
+
 	* tests/msgcat.test: Added message catalog test suite.
 
 	* library/msgcat1.0/msgcat.tcl: minor bug fixes, integrated latest
